--- a/common.css
+++ b/common.css
@@ -94,7 +94,6 @@ html, body {
 
 /* header */
 #navbar {
-    font-family: Poppins;
     font-weight: 500;
     background-color: var(--header-color);
     display: flex;
@@ -136,12 +135,10 @@ main {
 /* footer */
 footer {
     padding: 3rem 0;
-    /* background-color: var(--footer-color); */
+    background-color: var(--footer-color);
     text-align: center;
     font-weight: 200;
     color: var(--gray1-color);
-    height: 300;
-    background: url('images/home_background.png');
 }
 
 footer h1 {
@@ -174,18 +171,41 @@ footer h1 span {
     text-align: center;
     margin: auto;
     width: 100%;
-    height: 300px;
 }
 
-section#about {
-    background-image: url(images/home_background.png);
-    width: 100%;
+/* intro */
+#intro {
+    background: url('images/home_background.png') center/cover no-repeat;
+    height: 1016px;
 }
 
+#intro strong {
+    font-weight: 500;
+}
+
+#intro p {
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: var(--white-color);
+    padding: 440px 0;
+}
+
+#intro p span {
+    font-weight: 600;
+    color: var(--green-color);
+}
+
+/* about me */
+#about {
+    background-color: var(--black-color);
+}
+
+/* work */
 #works {
     background-color: #2ED3B4;
 }
 
+/* footer */
 #contact {
     background-color: var(--orange-color);
 }
