--- a/common.css
+++ b/common.css
@@ -208,7 +208,56 @@ footer h1 span {
 
 /* work */
 #works {
-    background-color: #2ED3B4;
+    padding: 4rem 0 8rem 0;
+}
+
+#works p.title {
+    color: var(--white-color);
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 3rem;
+}
+
+.work_content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.work_content img {
+    width: 786px;
+}
+
+.work_content:nth-child(2n) img {
+    margin-right: 30px;
+}
+
+.work_content:nth-child(odd) img {
+    margin-left: 30px;
+}
+
+.work_content h4 {
+    color: var(--white-color);
+    font-size: 28px;
+}
+
+.work_info {
+    text-align: left;
+}
+
+.work_info p {
+    font-size: 1rem;
+    color: var(--gray2-color);
+    margin-bottom: 2rem;
+}
+
+.work_info a {
+    color: var(--green-color);
+}
+
+.work_info a:hover {
+    text-decoration: underline;
 }
 
 /* footer */
