--- a/common.css
+++ b/common.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css');
 
 * {
     margin: 0px;
@@ -162,10 +162,15 @@ footer h1 span {
 .footer_info span:nth-child(odd) {
     color: var(--gray2-color);
     margin-right: 0.5rem;
+    font-weight: 300;
 }
 
 .footer_info span:nth-child(2) {
     margin-right: 2rem;
+}
+
+.footer_info span:nth-child(2n) {
+    font-weight: 300;
 }
 
 .copyright {
@@ -181,8 +186,8 @@ footer h1 span {
 
 /* intro */
 #intro {
-    background: url('images/home_background.png') center/cover no-repeat;
-    height: 1016px;
+    /* background: url('images/home_background.png') center/cover no-repeat; */
+    /* height: 1016px; */
 }
 
 #intro strong {
@@ -220,7 +225,7 @@ footer h1 span {
 
 p.work_title {
     color: var(--white-color);
-    font-size: 40px;
+    font-size: 36px;
     font-weight: 700;
     margin-bottom: 1.5rem;
 }
@@ -313,17 +318,6 @@ p.work_title {
     border-bottom: 2px solid var(--white-color);
     padding: 0 0 8px 0;
     position: relative;
-}
-
-.header a.active::before {
-    content: "";
-    width: 3px;
-    height: 3px;
-    border-radius: 50%;
-    background-color: var(--white-color);
-    position: absolute;
-    top: -4px;
-    right: 0;
 }
 
 .header_item {
