--- a/common.css
+++ b/common.css
@@ -233,7 +233,7 @@ p.work_title {
     color: var(--white-color);
     font-size: 36px;
     font-weight: 700;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3rem;
 }
 
 .work_project img {
@@ -242,6 +242,10 @@ p.work_title {
 
 .project {
     position: relative;
+}
+
+.project.invisible {
+    display: none;
 }
 
 .project_description {
